# mcp2518fd

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/rp-pico/: Cargo.toml  README.md
examples/rp-pico-interrupts/: Cargo.toml  README.md
examples/rp-pico-interrupts/src/: main.rs
examples/rp-pico/.cargo/: config.toml
examples/rp-pico/src/: main.rs
src/: lib.rs  macros.rs  settings.rs  spi.rs
src/memory/: chip.rs  mod.rs
src/memory/controller/: configuration.rs  diagnostic.rs  fifo.rs  filter.rs  interrupt.rs  mod.rs  status.rs
src/message/: mod.rs  rx.rs  tx.rs
