[package]
name = "mcp2518fd"
version = "0.1.0"
authors = ["Adrian Wowk <adrian@adom.inc>"]
edition = "2021"
license = "MIT"

[dependencies]
arbitrary-int = "1.2.7"
bitfield = "0.17.0"
concat-idents = "1.1.5"
embedded-can = "0.4.1"
embedded-hal = "1.0.0"
num_enum = { version = "0.7.3", default-features = false }

defmt = { version = "0.3.10", optional = true }

maybe-async = { version = "0.2.10", features = ["is_sync"] }
embedded-hal-async = { version = "1.0.0", optional = true }
futures = { version = "0.3.31", optional = true, default-features = false}
crc = "3.4.0"

[features]

default = []

defmt = ["dep:defmt", "arbitrary-int/defmt"]
async = ["dep:embedded-hal-async", "dep:futures"]
