[package]
name = "mcp2518fd-rp-pico"
version = "0.1.0"
authors = ["Adrian Wowk <adrian@adom.inc>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
mcp2518fd = { path = "../../", features = ["defmt"] }

cortex-m = "0.7"
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4"
embedded-can = "0.4.1"
embedded-hal = { version = "1.0.0" }
fugit = "0.3.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rp-pico = "0.9"
embedded-hal-bus = "0.3.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
